# ElectronicCircuitSimulator

./: Cargo.toml  README.md  circuit.json  release.sh
src/: circuit.rs  main.rs  utils.rs
src/circuit/: circuit.rs  display_impl.rs  mod.rs  serde_impl.rs
src/views/: circuit_view.rs  edit_component.rs  get_from_json.rs  home.rs  mod.rs  pages_enum.rs  save_as_json.rs
