[package]
name = "circuit-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
crossterm = "*"
console = "*"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"